[package]
name = "gilt-tui-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macros for gilt-tui (view! and css! macros)"
license = "MIT"
repository = "https://github.com/khalidelborai/gilt-tui"
rust-version = "1.82.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
